2012-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.blank_check): Add blank check of
	Flash ROM.

2012-06-21  Niibe Yutaka  <gniibe@fsij.org>

	* tool/asm-thumb/blank_check.S: New.

2012-06-20  Niibe Yutaka  <gniibe@fsij.org>

	ST-Link/V2 flash ROM writer.
	* tool/stlinkv2.py: New.
	* tool/asm-thumb/opt_bytes_write.S: New.
	* tool/asm-thumb/flash_write.S: New.

2012-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.20.

	* src/usb_desc.c (gnukStringSerial): Updated.

2012-06-18  Niibe Yutaka  <gniibe@fsij.org>

	LED display output change.
	* src/main.c (MAIN_TIMEOUT_INTERVAL): New.
	(LED_TIMEOUT_INTERVAL, etc.): New values.
	(main_mode, display_interaction): Remove.
	(led_inverted, emit_led): New.
	(display_status_code): Use emit_led.
	(led_blink): Use LED_* for SPEC.
	(main, fatal): New LED display output.
	* src/gnuk.h (LED_ONESHOT, LED_TWOSHOTS, LED_SHOW_STATUS)
	(LED_START_COMMAND, LED_FINISH_COMMAND, LED_FATAL): New semantics.
	(main_thread): Remove.
	* src/openpgp-do.c (gpg_do_keygen): Don't touch LED here.
	* src/openpgp.c (get_pinpad_input): Call led_blink.
	(cmd_pso, cmd_internal_authenticate): Don't touch LED here.
	(GPGthread): Call led_blink.
	* src/pin-cir.c (pinpad_getline): Change arg of led_blink.
	* src/pin-dnd.c (pinpad_getline): Ditto.
	* src/usb-icc.c (icc_handle_timeout): Ditto.
	(icc_send_status): Call led_blink.
	* src/usb_ctrl.c (gnuk_usb_event): Don't touch LED here.

2012-06-16  Niibe Yutaka  <gniibe@fsij.org>

	Use SHA256 format for "external authenticate".
	* tool/gnuk_upgrade.py (gpg_sign): SHA256 sign by "SCD PKAUTH".
	(main): Not specify keygrip, but always use key for authentication.
	* src/call-rsa.c (rsa_verify): It is SHA256 format (was: SHA1).
	* src/openpgp.c (cmd_get_challenge): Don't add chip-id prefix.
	(cmd_external_authenticate): Likewise.

2012-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (random_bytes_free): Clear out random bytes.

	More protection improvements.